public enum AlarmCategory {
    TRABAJO, ESTUDIO, DEPORTE, MEDICINA, GENERAL
}